@@ -97,5 +97,8 @@
     <string name="unknown_event_str">Unknown event</string>
     
     <string name="validate_event_label_str">Event validated</string>
-    <string name="pandroid_event_viewer_description_str">DESCRIPTION PANDROID EVENT VIEWER</string>
+
+    <string name="pandroid_event_viewer_description_str">Pandroid Event is a free event viewer for Pandora FMS, an OpenSource monitoring system. This event viewer will show you in real-time all new events coming from your Pandora FMS server, using its Web API. You will be able to validate, search and see event details from your Android phone.
+
+</string>
 </resources>
